--- a/MoodleModulePrototypeComponents/PersonnelSTU.Domain/PersonnelSTU.Domain.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Domain/PersonnelSTU.Domain.csproj
@@ -40,7 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Faculty.cs" />
+    <Compile Include="Group.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specialty.cs" />
+    <Compile Include="StudentState.cs" />
+    <Compile Include="STUState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
