--- a/MoodleModulePrototypeComponents/PersonnelSTU.Data/App.config
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Data/App.config
@@ -16,5 +16,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="FakePersonnelSTUDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FakePersonnelSTUDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+    <add name="PersonnelSTUDb" connectionString="Data source=10.242.46.251; Initial Catalog=Syn2; User ID=usr3; Password=1n2d3a; MultipleActiveResultSets=True; App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
