--- a/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Infrastructure\AppConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\SqlProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
