--- a/MoodleModulePrototypeComponents/Web.PersonnelSTU.FakeDBUtilApp/packages.config
+++ b/MoodleModulePrototypeComponents/Web.PersonnelSTU.FakeDBUtilApp/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="Autofac" version="4.6.2" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net461" />
   <package id="bootstrap" version="4.0.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
