--- a/MoodleModulePrototypeComponents/Web.Common/packages.config
+++ b/MoodleModulePrototypeComponents/Web.Common/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
-  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
 </packages>
