--- a/MoodleModulePrototypeComponents/Web.Common/Web.Common.csproj
+++ b/MoodleModulePrototypeComponents/Web.Common/Web.Common.csproj
@@ -42,6 +42,9 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Web.Mvc, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.Futures.5.0.0\lib\net40\Microsoft.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -88,7 +91,12 @@
     <Compile Include="App\BundleConfig.cs" />
     <Compile Include="App\BundleNullOrderer.cs" />
     <Compile Include="App\EmbeddedResourceBundle.cs" />
+    <Compile Include="App\Extensions\ControllerExtensions.cs" />
+    <Compile Include="App\Extensions\HtmlExtensions.cs" />
+    <Compile Include="App\Extensions\RequestExtensions.cs" />
+    <Compile Include="App\Extensions\UrlHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrlValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
