--- a/MoodleModulePrototypeComponents/Web.PersonnelSTU.FakeDBUtilApp/packages.config
+++ b/MoodleModulePrototypeComponents/Web.PersonnelSTU.FakeDBUtilApp/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.5.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.5.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc.Futures" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
