--- a/MoodleModulePrototypeComponents/PersonnelSTU.Data/App.config
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Data/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="FakePersonnelSTUDb" value="FakePersonnelSTUDb" />
     <add key="PersonnelSTUDb" value="Syn2" />
@@ -8,4 +12,10 @@
     <add name="FakePersonnelSTUDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FakePersonnelSTUDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
     <add name="PersonnelSTUDb" connectionString="Data source=10.242.46.251; Initial Catalog=Syn2; User ID=usr3; Password=1n2d3a; MultipleActiveResultSets=True; App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
