--- a/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
@@ -33,6 +33,12 @@
     <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -51,6 +57,8 @@
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Infrastructure\AppConfig.cs" />
+    <Compile Include="Infrastructure\PersonnelStuDbContext.cs" />
+    <Compile Include="Infrastructure\PersonnelStuDbFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SqlProvider.cs" />
   </ItemGroup>
@@ -66,6 +74,10 @@
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{93086ed9-4e39-4e28-9c12-9bfb60258f16}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PersonnelSTU.Domain\PersonnelSTU.Domain.csproj">
+      <Project>{dff09623-6e81-4fb8-9649-5a59af4a3622}</Project>
+      <Name>PersonnelSTU.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
