--- a/MoodleModulePrototypeComponents/PersonnelSTU.Domain/PersonnelSTU.Domain.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Domain/PersonnelSTU.Domain.csproj
@@ -48,5 +48,11 @@
     <Compile Include="StudentState.cs" />
     <Compile Include="STUState.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Domain\Common.Domain.csproj">
+      <Project>{ae801ccf-ea57-446e-ade4-3c0ecc6ef32c}</Project>
+      <Name>Common.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
