--- a/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Infrastructure\PersonnelStuDbFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SqlProvider.cs" />
+    <Compile Include="Repositories\PersonnelStuEntityRepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
