--- a/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.Data/PersonnelSTU.Data.csproj
@@ -61,7 +61,14 @@
     <Compile Include="Infrastructure\PersonnelStuDbFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SqlProvider.cs" />
+    <Compile Include="Repositories\FacultyRepository.cs" />
+    <Compile Include="Repositories\GroupRepository.cs" />
     <Compile Include="Repositories\PersonnelStuEntityRepositoryBase.cs" />
+    <Compile Include="Repositories\PersonRepository.cs" />
+    <Compile Include="Repositories\SpecialtyRepository.cs" />
+    <Compile Include="Repositories\StudentStateRepository.cs" />
+    <Compile Include="Repositories\StuStateRepository.cs" />
+    <Compile Include="Repositories\TeacherRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
