Fixed domain model, added console project for synhronize data from Stu database, added dacpac from local database

--- a/MoodleModulePrototypeComponents/PersonnelSTU.FakeDBUtilApp/PersonnelSTU.FakeDBUtilApp.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.FakeDBUtilApp/PersonnelSTU.FakeDBUtilApp.csproj
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E0F6D37-5E5C-44D9-9169-598E1270877F}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{9BFE4BA2-C7F1-4ED1-AEA0-F7804FA5C453}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PersonnelSTU.FakeDBUtilAPI</RootNamespace>
-    <AssemblyName>PersonnelSTU.FakeDBUtilAPI</AssemblyName>
+    <RootNamespace>PersonnelSTU.FakeDBUtilApp</RootNamespace>
+    <AssemblyName>PersonnelSTU.FakeDBUtilApp</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,44 +32,45 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\DbProvider.cs" />
-    <Compile Include="Providers\FakeDbProvider.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common.Data\Common.Data.csproj">
-      <Project>{5b1d3893-720d-4bb9-8a10-7ab2edd2803e}</Project>
-      <Name>Common.Data</Name>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{93086ED9-4E39-4E28-9C12-9BFB60258F16}</Project>
+      <Name>Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\PersonnelSTU.Data\PersonnelSTU.Data.csproj">
-      <Project>{e6e1850a-082e-4ca7-bce0-0d4881305629}</Project>
+      <Project>{E6E1850A-082E-4CA7-BCE0-0D4881305629}</Project>
       <Name>PersonnelSTU.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\PersonnelSTU.Domain\PersonnelSTU.Domain.csproj">
-      <Project>{dff09623-6e81-4fb8-9649-5a59af4a3622}</Project>
+      <Project>{DFF09623-6E81-4FB8-9649-5A59AF4A3622}</Project>
       <Name>PersonnelSTU.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+         Other similar extension points exist, see Microsoft.Common.targets.
+    <Target Name="BeforeBuild">
+    </Target>
+    <Target Name="AfterBuild">
+    </Target>
+    -->
 </Project>
