--- a/MoodleModulePrototypeComponents/PersonnelSTU.FakeDBUtilApp/PersonnelSTU.FakeDBUtilApp.csproj
+++ b/MoodleModulePrototypeComponents/PersonnelSTU.FakeDBUtilApp/PersonnelSTU.FakeDBUtilApp.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EmbeddedResource Include="FakePersonnelSTUDb.dacpac" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
