--- a/src/Web.Common/Web.Common.csproj
+++ b/src/Web.Common/Web.Common.csproj
@@ -33,8 +33,8 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
+    <Reference Include="Autofac, Version=4.8.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.8.0\lib\net45\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="Autofac.Integration.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.Mvc5.4.0.2\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
@@ -45,8 +45,8 @@
     <Reference Include="Microsoft.Web.Mvc, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Mvc.Futures.5.0.0\lib\net40\Microsoft.Web.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,25 +56,25 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.Helpers.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.5\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.4\lib\net45\System.Web.Mvc.dll</HintPath>
+    <Reference Include="System.Web.Mvc, Version=5.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.5\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.4\lib\net45\System.Web.Razor.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.5\lib\net45\System.Web.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.5\lib\net45\System.Web.WebPages.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.5\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.5\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -88,7 +88,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App\AppStart.cs" />
-    <Compile Include="App\BundleConfig.cs" />
     <Compile Include="App\BundleNullOrderer.cs" />
     <Compile Include="App\EmbeddedResourceBundle.cs" />
     <Compile Include="App\Extensions\ControllerExtensions.cs" />
@@ -100,9 +99,37 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <EmbeddedResource Include="Content\bootstrap-grid.css.map" />
+    <EmbeddedResource Include="Content\bootstrap-grid.min.css.map" />
+    <EmbeddedResource Include="Content\bootstrap-reboot.css.map" />
+    <EmbeddedResource Include="Content\bootstrap-reboot.min.css.map" />
+    <EmbeddedResource Include="Content\bootstrap.css.map" />
+    <EmbeddedResource Include="Content\bootstrap.min.css.map" />
+    <EmbeddedResource Include="Content\fonts\fontawesome-webfont.eot" />
+    <EmbeddedResource Include="Content\fonts\fontawesome-webfont.ttf" />
+    <EmbeddedResource Include="Content\fonts\fontawesome-webfont.woff" />
+    <EmbeddedResource Include="Content\fonts\fontawesome-webfont.woff2" />
+    <EmbeddedResource Include="Content\fonts\FontAwesome.otf" />
     <None Include="packages.config" />
     <EmbeddedResource Include="Scripts\jquery-3.3.1.min.map" />
     <EmbeddedResource Include="Scripts\jquery-3.3.1.slim.min.map" />
+    <EmbeddedResource Include="Scripts\bootstrap.bundle.js.map" />
+    <EmbeddedResource Include="Scripts\bootstrap.bundle.min.js.map" />
+    <EmbeddedResource Include="Scripts\bootstrap.js.map" />
+    <EmbeddedResource Include="Scripts\bootstrap.min.js.map" />
+    <EmbeddedResource Include="Scripts\esm\popper-utils.js.map" />
+    <EmbeddedResource Include="Scripts\esm\popper-utils.min.js.map" />
+    <EmbeddedResource Include="Scripts\esm\popper.js.map" />
+    <EmbeddedResource Include="Scripts\esm\popper.min.js.map" />
+    <EmbeddedResource Include="Scripts\popper-utils.js.map" />
+    <EmbeddedResource Include="Scripts\popper-utils.min.js.map" />
+    <EmbeddedResource Include="Scripts\popper.js.map" />
+    <EmbeddedResource Include="Scripts\popper.min.js.map" />
+    <EmbeddedResource Include="Scripts\README.md" />
+    <EmbeddedResource Include="Scripts\umd\popper-utils.js.map" />
+    <EmbeddedResource Include="Scripts\umd\popper-utils.min.js.map" />
+    <EmbeddedResource Include="Scripts\umd\popper.js.map" />
+    <EmbeddedResource Include="Scripts\umd\popper.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common.Data\Common.Data.csproj">
@@ -120,6 +147,39 @@
     <EmbeddedResource Include="Scripts\jquery-3.3.1.min.js" />
     <EmbeddedResource Include="Scripts\jquery-3.3.1.slim.js" />
     <EmbeddedResource Include="Scripts\jquery-3.3.1.slim.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\bootstrap-grid.css" />
+    <EmbeddedResource Include="Content\bootstrap-grid.min.css" />
+    <EmbeddedResource Include="Content\bootstrap-reboot.css" />
+    <EmbeddedResource Include="Content\bootstrap-reboot.min.css" />
+    <EmbeddedResource Include="Content\bootstrap.css" />
+    <EmbeddedResource Include="Content\bootstrap.min.css" />
+    <EmbeddedResource Include="Content\fonts\font-awesome.css" />
+    <EmbeddedResource Include="Content\fonts\font-awesome.min.css" />
+    <EmbeddedResource Include="Content\fonts\fontawesome-webfont.svg" />
+    <EmbeddedResource Include="Content\Site.css" />
+    <EmbeddedResource Include="Scripts\bootstrap.bundle.js" />
+    <EmbeddedResource Include="Scripts\bootstrap.bundle.min.js" />
+    <EmbeddedResource Include="Scripts\bootstrap.js" />
+    <EmbeddedResource Include="Scripts\bootstrap.min.js" />
+    <EmbeddedResource Include="Scripts\esm\popper-utils.js" />
+    <EmbeddedResource Include="Scripts\esm\popper-utils.min.js" />
+    <EmbeddedResource Include="Scripts\esm\popper.js" />
+    <EmbeddedResource Include="Scripts\esm\popper.min.js" />
+    <EmbeddedResource Include="Scripts\modernizr-2.8.3.js" />
+    <EmbeddedResource Include="Scripts\popper-utils.js" />
+    <EmbeddedResource Include="Scripts\popper-utils.min.js" />
+    <EmbeddedResource Include="Scripts\popper.js" />
+    <EmbeddedResource Include="Scripts\popper.min.js" />
+    <EmbeddedResource Include="Scripts\umd\popper-utils.js" />
+    <EmbeddedResource Include="Scripts\umd\popper-utils.min.js" />
+    <EmbeddedResource Include="Scripts\umd\popper.js" />
+    <EmbeddedResource Include="Scripts\umd\popper.min.js" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\index.d.ts" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
