Added default  asp net mvc web application for student card.

--- a/src/Web.Common/Web.Common.csproj
+++ b/src/Web.Common/Web.Common.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App\AppStart.cs" />
+    <Compile Include="App\BundleConfig.cs" />
     <Compile Include="App\BundleNullOrderer.cs" />
     <Compile Include="App\EmbeddedResourceBundle.cs" />
     <Compile Include="App\Extensions\ControllerExtensions.cs" />
