--- a/src/StudentCard.Web.UI/Web.config
+++ b/src/StudentCard.Web.UI/Web.config
@@ -55,6 +55,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.11.0" newVersion="8.0.11.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
@@ -83,6 +87,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="moodledecanat" connectionString="provider=System.Data.MySql;data source=127.0.0.1;initial catalog=moodledecanat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.EntityClient" />
+    <add name="moodledecanat" providerName="MySql.Data.MySqlClient" connectionString="server=127.0.0.1;database=moodledecanat;uid=root;" />
   </connectionStrings>
 </configuration>
