--- a/src/StudentCard.Web.UI/packages.config
+++ b/src/StudentCard.Web.UI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.5.1" targetFramework="net461" />
@@ -10,5 +11,6 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.8.0" targetFramework="net461" developmentDependency="true" />
+  <package id="MySql.Data" version="8.0.11" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
 </packages>
