--- a/src/Web.Common/packages.config
+++ b/src/Web.Common/packages.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="Autofac" version="4.8.0" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
   <package id="bootstrap" version="4.1.1" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.5" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.Futures" version="5.0.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.5" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.5" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
