Removed unusable views and actions. Chaged connection string in StudentCard.Web.UI.

--- a/src/StudentCard.Web.UI/Web.config
+++ b/src/StudentCard.Web.UI/Web.config
@@ -88,6 +88,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="moodledecanat" connectionString="server=localhost;database=moodledecanat;uid=root;password=123;" providerName="MySql.Data.MySqlClient" />
+    <add name="moodledecanat" connectionString="server=localhost;database=moodledecanat;uid=root;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
