Added started page with persons searching. Fixed invalid jquery bundle in Layout view. Removed unusable methods in EntityRepositoryBase.

--- a/src/StudentCard.Web.UI/StudentCard.Web.UI.csproj
+++ b/src/StudentCard.Web.UI/StudentCard.Web.UI.csproj
@@ -173,10 +173,13 @@
     <Compile Include="App\BundleConfig.cs" />
     <Compile Include="App\FilterConfig.cs" />
     <Compile Include="App\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StudentCardController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\StudentCard\Front\FacultyModel.cs" />
+    <Compile Include="Models\StudentCard\Front\StudentCardFrontModel.cs" />
+    <Compile Include="Models\StudentCard\Search\StudentCardSearchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -198,13 +201,13 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\StudentCard\Front.cshtml" />
+    <Content Include="Views\StudentCard\Index.cshtml" />
+    <Content Include="Views\StudentCard\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common.Data\Common.Data.csproj">
