--- a/src/StudentCard.Web.UI/Web.config
+++ b/src/StudentCard.Web.UI/Web.config
@@ -81,16 +81,23 @@
   </system.codedom>
   <system.data>
     <DbProviderFactories>
-      <add name="MySQL" description="ADO.Net driver for MySQL" invariant="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient"
+           description=".Net Framework Data Provider for SqlServer"
+           type="System.Data.SqlClient.SqlClientFactory, System.Data" />
     </DbProviderFactories>
   </system.data>
   <entityFramework>
-    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices,  MySql.Data.Entity.EF6" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <connectionStrings>
     <add name="moodledecanat" connectionString="server=localhost;database=moodledecanat;uid=root;" providerName="MySql.Data.MySqlClient" />
+    <add name="FakePersonnelSTUDb" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=FakePersonnelSTUDb;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="PersonnelSTUDb" connectionString="Data source=10.242.46.251; Initial Catalog=Syn2; User ID=usr3; Password=1n2d3a; encrypt=false" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
